# ART

./: AGENT.md  LICENSE  README.md  THIRD-PARTY-NOTICES  pyproject.toml  scan_ip.py
.github/workflows/: check-version-bump.yml
dev/: causality.ipynb  data.ipynb  demo_logging.py  illustrate.py  yes-no-maybe.ipynb
dev/overfitting_expts/: configs.py  essay_topics.py  life_coaching.py  pyproject.toml  run_overfitting_experiments.py  tic_tac_toe.py  yes_no_maybe.py
dev/swebench/: art_style_rollout.py  claude_rollout.py  instance_filter.py  qwen_rollout.py  rollout.py  test_art_style.py  test_instance_filter.py  train_art_style.py  vllm.ipynb
dev/tau-bench/: run_rl.py  run_training.py
dev/test_skypilot/: launch.py  launch_tail.py  register_model.py
docs/: docs.json
docs/experimental/: gspo.mdx
docs/features/: mcp-rl.mdx
docs/fundamentals/: art-backend.mdx
docs/getting-started/: about.mdx  notebooks.mdx  quick-start.mdx
docs/integrations/: langgraph-integration.mdx
docs/tutorials/: open-deep-research.mdx
examples/: art-e.ipynb  auto_rl.ipynb
examples/2048/: 2048-ruler.ipynb  2048.ipynb
examples/art-e-langgraph/: all_experiments.py  pyproject.toml  run_training.py
examples/codenames/: Codenames_RL.ipynb
examples/just-the-facts/: pyproject.toml  run_remote.py  test_scraper.py
examples/just-the-facts/just_the_facts/: __init__.py  checks.py  display_benchmarks.ipynb  experiments.py  find_articles.py  generate_benchmarks.py  rollout.py  scenarios.py  train.py  utils.py
examples/mcp-rl/: mcp-rl-alphavantage.ipynb  mcp-rl.ipynb  pyproject.toml  test_scenario_generation.py
examples/park-ranger/: main.py  pyproject.toml
examples/persuasion-bot/: .env.example  chat.py  main.py  pyproject.toml  (+1 more)
scripts/: install-gpt-oss-vllm.sh  run_checks.sh
(+101 files in other folders)
